--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "Sushant_Kumar_Shakya",
   "license": "ISC",
   "dependencies": {
-    "react-router-dom": "^4.1.1"
+    "material-ui": "^0.18.3",
+    "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
