--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
+    "muicss": "^0.9.17",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
